# LCPA-BWT

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Prefixes  Prefixes.hi  Prefixes.hs  README.md  algorithms.cpp  algorithms.h
Release/: makefile
Release/src/: subdir.mk
data/: 1_1000000_1.txt  1_100000_1.txt  1_10000_1.txt  1_1000_1.txt  1_10050_1.txt  1_10_1.txt  1_10_1T.txt  1_150_1.txt  1_20_1.txt  1_250000_1.txt  1_500000_1.txt  1_5000_1.txt  1_750000_1.txt  le
documentation/: fer.cls  literatura.bib  seminar.aux  seminar.bbl  seminar.blg  seminar.tex  seminar.toc
expected/: 1_100000_1.txt  1_1000_1.txt  1_10050_1.txt  1_250000_1.txt
src/: Alphabet.cpp  Alphabet.h  BWTree.cpp  BWTree.h  Bwt.cpp  Bwt.h  algorithms.cpp  algorithms.h  divsufsort.c  divsufsort.h  main.cpp  sais.hh
